<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
<modelVersion>4.0.0</modelVersion>
<parent>
	<groupId>it.giunti.apg</groupId>
	<artifactId>apg-project</artifactId>
	<version>6.0-SNAPSHOT</version>
</parent>
<groupId>it.giunti.apg.automation</groupId>
<artifactId>apg-automation</artifactId>
<packaging>war</packaging>
<name>APG Automation</name>

<!--repositories>
    <repository>
       <id>local-repo</id>
       <url>file://${pom.basedir}/repo</url>
    </repository>
</repositories-->

<properties>
	<!-- Charset UTF-8 -->
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<!-- Note: GWT needs at least java 1.6 -->
	<maven.compiler.source>1.8</maven.compiler.source>
	<maven.compiler.target>1.8</maven.compiler.target>
	<!-- JasperReports -->
	<version.jasperreports>5.6.1</version.jasperreports>
	<version.jasperreports-plugin>1.0-beta-2</version.jasperreports-plugin>
</properties>

<dependencies>
	<dependency>
		<groupId>it.giunti.apg.core</groupId>
		<artifactId>apg-core</artifactId>
		<version>6.0-SNAPSHOT</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
	<dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>javax.servlet-api</artifactId>
		<version>3.1.0</version>
		<scope>provided</scope>
	</dependency>

	<!-- LOCAL DEPENDENCIES -->
	<dependency>
		<groupId>com.sap</groupId>
		<artifactId>jco</artifactId>
		<version>3.0.9</version>
		<scope>system</scope>
		<systemPath>${pom.basedir}/repo/jco-3.0.9.jar</systemPath>
	</dependency>
	<dependency>
		<groupId>net.sf.jasperreports</groupId>
		<artifactId>jasper-freemono</artifactId>
		<version>1.0</version>
		<scope>system</scope>
		<systemPath>${pom.basedir}/repo/jasper-freemono-1.0.jar</systemPath>
	</dependency>
	<dependency>
		<groupId>net.sf.jasperreports</groupId>
		<artifactId>jasper-freesans</artifactId>
		<version>1.0</version>
		<scope>system</scope>
		<systemPath>${pom.basedir}/repo/jasper-freesans-1.0.jar</systemPath>
	</dependency>
	<dependency>
		<groupId>net.sf.jasperreports</groupId>
		<artifactId>jasper-freeserif</artifactId>
		<version>1.0</version>
		<scope>system</scope>
		<systemPath>${pom.basedir}/repo/jasper-freeserif-1.0.jar</systemPath>
	</dependency>
	<dependency>
		<groupId>net.sf.jasperreports</groupId>
		<artifactId>jasper-idautomationocrb</artifactId>
		<version>1.0</version>
		<scope>system</scope>
		<systemPath>${pom.basedir}/repo/jasper-idautomationocrb-1.0.jar</systemPath>
	</dependency>
    
	<!-- QUARTZ -->
	<!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
	<dependency>
		<groupId>org.quartz-scheduler</groupId>
		<artifactId>quartz</artifactId>
		<version>2.1.7</version>
	</dependency>

	<!-- JASPERREPORTS -->
	<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
	<dependency>
		<groupId>net.sf.jasperreports</groupId>
		<artifactId>jasperreports</artifactId>
		<version>${version.jasperreports}</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports-fonts -->
	<dependency>
		<groupId>net.sf.jasperreports</groupId>
		<artifactId>jasperreports-fonts</artifactId>
		<version>${version.jasperreports}</version>
	</dependency>

	<!-- BARCODE -->
	<!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
	<dependency>
		<groupId>com.google.zxing</groupId>
		<artifactId>core</artifactId>
		<version>3.3.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.google.zxing/javase -->
	<dependency>
		<groupId>com.google.zxing</groupId>
		<artifactId>javase</artifactId>
		<version>3.3.0</version>
	</dependency>

	<!-- ALTRO -->
	<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
	<dependency>
		<groupId>ch.qos.logback</groupId>
	    <artifactId>logback-classic</artifactId>
		<version>1.2.3</version>
	</dependency>
</dependencies>

<profiles>
	<!-- PROD -->
	<profile>
		<id>prod</id>
		<build>
			<finalName>apgautomation</finalName>
			<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
					<configuration>
						<systemPropertyVariables>
							<java.awt.headless>true</java.awt.headless>
						</systemPropertyVariables>
					</configuration>
				</plugin>
			
				<!-- COPYING and MOVING FILES -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
					<executions>
					    <execution>
					        <id>copy-resources-classes</id>
					        <phase>process-resources</phase>
					        <goals>
					            <goal>copy-resources</goal>
					        </goals>
					        <configuration>
						        <overwrite>true</overwrite>
					            <outputDirectory>${basedir}/target/classes</outputDirectory>
					            <resources>
					            	<resource>
										<directory>${basedir}/src/main/resources</directory>
										<includes>
											<include>**</include>
										</includes>
									</resource>
					                <resource>
					                    <directory>${basedir}/src/main/resources/prod</directory>
					                    <includes>
					                        <include>*</include>
					                    </includes>
					                </resource>
					            </resources>
					        </configuration>
					    </execution>
					    <execution>
					        <id>copy-resources-lib</id>
					        <phase>process-resources</phase>
					        <goals>
					            <goal>copy-resources</goal>
					        </goals>
					        <configuration>
						        <overwrite>true</overwrite>
					            <outputDirectory>${basedir}/src/main/webapp/WEB-INF/lib</outputDirectory>
					            <resources>
					            	<resource>
										<directory>${basedir}/repo</directory>
										<includes>
											<include>**</include>
										</includes>
									</resource>
					            </resources>
					        </configuration>
					    </execution>
					</executions>
				</plugin>
				
				<!-- jasperreports -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>jasperreports-maven-plugin</artifactId>
					<version>${version.jasperreports-plugin}</version>
					<configuration>
						<sourceDirectory>src/main/resources/report</sourceDirectory>
						<outputDirectory>src/main/resources/report</outputDirectory>
						<compiler>net.sf.jasperreports.engine.design.JRJavacCompiler</compiler>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>compile-reports</goal>
							</goals>
							<phase>compile</phase>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>net.sf.jasperreports</groupId>
							<artifactId>jasperreports</artifactId>
							<version>${version.jasperreports}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
			</pluginManagement>
		</build>
	</profile>
	<!-- /PROD -->

	<!-- QLT -->
	<profile>
		<id>qlt</id>
		<build>
			<finalName>apgautomation</finalName>
			<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
					<configuration>
						<systemPropertyVariables>
							<java.awt.headless>true</java.awt.headless>
						</systemPropertyVariables>
					</configuration>
				</plugin>
				
				<!-- COPYING and MOVING FILES -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
					<executions>
					    <execution>
					        <id>copy-resources-classes</id>
					        <phase>process-resources</phase>
					        <goals>
					            <goal>copy-resources</goal>
					        </goals>
					        <configuration>
					        	<overwrite>true</overwrite>
					            <outputDirectory>${basedir}/target/classes</outputDirectory>
					            <resources>
					            	<resource>
										<directory>${basedir}/src/main/resources</directory>
										<includes>
											<include>**</include>
										</includes>
									</resource>
					                <resource>
					                    <directory>${basedir}/src/main/resources/qlt</directory>
					                    <includes>
					                        <include>*</include>
					                    </includes>
					                </resource>
					            </resources>
					        </configuration>
					    </execution>
					    <execution>
					        <id>copy-resources-lib</id>
					        <phase>process-resources</phase>
					        <goals>
					            <goal>copy-resources</goal>
					        </goals>
					        <configuration>
						        <overwrite>true</overwrite>
					            <outputDirectory>${basedir}/src/main/webapp/WEB-INF/lib</outputDirectory>
					            <resources>
					            	<resource>
										<directory>${basedir}/repo</directory>
										<includes>
											<include>**</include>
										</includes>
									</resource>
					            </resources>
					        </configuration>
					    </execution>
					</executions>
				</plugin>
				
				<!-- jasperreports -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>jasperreports-maven-plugin</artifactId>
					<version>${version.jasperreports-plugin}</version>
					<configuration>
						<sourceDirectory>src/main/resources/report</sourceDirectory>
						<outputDirectory>src/main/resources/report</outputDirectory>
						<compiler>net.sf.jasperreports.engine.design.JRJavacCompiler</compiler>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>compile-reports</goal>
							</goals>
							<phase>compile</phase>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>net.sf.jasperreports</groupId>
							<artifactId>jasperreports</artifactId>
							<version>${version.jasperreports}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
			</pluginManagement>
		</build>
	</profile>
	<!-- /QLT -->
	
	<!-- DEV -->
	<profile>
		<id>dev</id>
		<activation>
            <activeByDefault>true</activeByDefault>
        </activation>
		<build>
			<finalName>apgautomation</finalName>
			<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
					<configuration>
						<systemPropertyVariables>
							<java.awt.headless>true</java.awt.headless>
						</systemPropertyVariables>
					</configuration>
				</plugin>
			
				<!-- COPYING and MOVING FILES -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
					<executions>
					    <execution>
					        <id>copy-resources</id>
					        <phase>process-resources</phase>
					        <goals>
					            <goal>copy-resources</goal>
					        </goals>
					        <configuration>
					        	<overwrite>true</overwrite>
					            <outputDirectory>${basedir}/target/classes</outputDirectory>
					            <resources>
					                <resource>
					                    <directory>${basedir}/src/main/resources</directory>
					                    <includes>
					                        <include>*</include>
					                    </includes>
					                </resource>
					            </resources>
					        </configuration>
					    </execution>
					</executions>
				</plugin>
				
				<!-- Maven Tomcat7 plugin -->
				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.2</version>
					<configuration>
						<path>/${project.build.finalName}</path>
						<port>8080</port>
						<contextReloadable>true</contextReloadable>
						<!--systemProperties>
							<JAVA_OPTS>-Xms256m -Xmx1024m -XX:+DisableExplicitGC -Dcom.sun.management.jmxremote -XX:PermSize=256m -XX:MaxPermSize=512m</JAVA_OPTS>
							<MAVEN_OPTS>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</MAVEN_OPTS>
						</systemProperties-->
					</configuration>
				</plugin>
				
				<!-- jasperreports -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>jasperreports-maven-plugin</artifactId>
					<version>${version.jasperreports-plugin}</version>
					<configuration>
						<sourceDirectory>src/main/resources/report</sourceDirectory>
						<outputDirectory>src/main/resources/report</outputDirectory>
						<compiler>net.sf.jasperreports.engine.design.JRJavacCompiler</compiler>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>compile-reports</goal>
							</goals>
							<phase>compile</phase>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>net.sf.jasperreports</groupId>
							<artifactId>jasperreports</artifactId>
							<version>${version.jasperreports}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
			</pluginManagement>
		</build>
	</profile>
	<!-- /DEV -->
</profiles>
</project>
